--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,13 +1,57 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <!--<div class="ion-text-center">
-    <ion-spinner color="primary" *ngIf = "isLoading"></ion-spinner>
-  </div>-->
-  
-  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">E-Mail</ion-label>
+            <ion-input
+              name="email"
+              ngModel
+              required
+              email
+              type="email"
+              #emailCtrl="ngModel"
+            ></ion-input>
+          </ion-item>
+          <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+            <ion-label>Should be valid email address.</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input
+              type="password"
+              name="password"
+              ngModel
+              required
+              minlength="3"
+              #passwordCtrl="ngModel"
+            ></ion-input>
+          </ion-item>
+          <ion-item
+            *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
+            lines="none"
+          >
+            <ion-label>Should be atleast 3 character long.</ion-label>
+          </ion-item>
+          <ion-button type="button" color="primary" fill="clear" expand="block" (click)="onSwitchAuthMode()"
+            >Switch to {{ isLogin ? 'Signup' : 'Login'}}</ion-button
+          >
+          <ion-button
+            type="submit"
+            color="primary"
+            expand="block"
+            [disabled]="!f.valid"
+            >{{ !isLogin ? 'Signup' : 'Login'}}</ion-button
+          >
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
