--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -5,12 +5,81 @@
     </ion-title>
     <ion-buttons slot="primary" (click)="onCancel()">
       <ion-button>
-        <ion-icon name='close'></ion-icon>
+        <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding ion-text-center">
-  <p>{{ selectedPlace.description }}</p>
-  <ion-button color='primary' (click)='onBookPlace()'>Book</ion-button>
+  <form #f="ngForm" (ngSubmit)="onBookPlace()">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">First Name of Guest</ion-label>
+            <ion-input
+              type="text"
+              ngModel
+              name="firstName"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Last Name</ion-label>
+            <ion-input type="text" ngModel name="lastName" required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Number of Guest</ion-label>
+            <ion-select [ngModel]="'2'" name="guestNumber" mode="ios">
+              <ion-select-option value="1">1</ion-select-option>
+              <ion-select-option value="2">2</ion-select-option>
+              <ion-select-option value="3">3</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">From</ion-label>
+            <ion-datetime
+              [ngModel]="startDate"
+              name="dateFrom"
+              required
+              display-format="MMM DD YYYY"
+              [min]='selectedPlace.availableFrom.toISOString()'
+              [max]='selectedPlace.availableTo.toISOString()'
+              #startDateCtrl="ngModel"
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+        <ion-col size-sm="3">
+          <ion-item>
+            <ion-label position="floating">To</ion-label>
+            <ion-datetime
+              [ngModel]="endDate"
+              name="dateTo"
+              required
+              display-format="MMM DD YYYY"
+              [min]='startDateCtrl.value'
+              [max]='selectedPlace.availableTo.toISOString()'
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button color="primary" type="submit" expand="block" [disabled]='!f.valid || !datesValid()'>Book!</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>  
 </ion-content>
