--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -37,7 +37,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="12" size-md="8" offset-md="2" class="ion-text-center">
-        <ion-virtual-scroll [items]="loadedPlaces" approxItemHeight="70px">
+        <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="70px">
           <ion-item detail *virtualItem="let place" [routerLink]="['/','places','tabs','discover',place.id]">
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
