--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -17,6 +17,9 @@
         <ion-list>
           <ion-item-sliding *ngFor='let booking of loadedBookings' #sliddingBooking>
             <ion-item>
+              <ion-avatar slot="start">
+                <ion-img [src]="booking.placeImage"></ion-img>
+              </ion-avatar>
               <ion-label>
                 <h5>{{booking.placeTitle}}</h5>
                 <p>Guest: {{booking.guestNumber}}</p>
