--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -38,7 +38,7 @@
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Number of Guest</ion-label>
-            <ion-select [ngModel]="'2'" name="guestNumber" mode="ios">
+            <ion-select [ngModel]="'2'" name="guestNumber">
               <ion-select-option value="1">1</ion-select-option>
               <ion-select-option value="2">2</ion-select-option>
               <ion-select-option value="3">3</ion-select-option>
