--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -19,6 +19,16 @@
         <p>{{ place.description }}</p>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" class="ion-padding">
+        <p>{{ place.location.address }}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
+        <ion-img class="location-image" [src]="place.location.staticMapImageUrl" (click)="onShowFullMap()"></ion-img>
+      </ion-col>
+    </ion-row>
     <ion-row *ngIf="isBookable">
       <ion-col size-sm="6" offset-sm="3" class="ion-text-center">
         <ion-button color="primary" (click)="onBookPlace()" class="ion-margin">Book</ion-button>
