--- a/src/app/shared/pickers/image-picker/image-picker.component.scss
+++ b/src/app/shared/pickers/image-picker/image-picker.component.scss
@@ -9,8 +9,11 @@
     justify-content: center;
     align-items: center;
 }
-.location-image {
+.image {
     width:100%;
     height: 100%;
-    object-fit: cover;
+}
+
+input[type='file'] {
+    display: none;
 }
